--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 absl-py==0.7.1
+aif360==0.2.1
 alembic==1.0.2
 asn1crypto==0.24.0
 astor==0.8.0
@@ -106,6 +107,7 @@ sortedcontainers==2.1.0
 SQLAlchemy==1.2.18
 statsmodels==0.9.0
 sympy==1.1.1
+tabulate==0.8.3
 tb-nightly==1.14.0a20190603
 tblib==1.3.2
 tensorflow==2.0.0b1
