--- a/requirements.txt
+++ b/requirements.txt
@@ -46,6 +46,7 @@ jupyter-core==4.4.0
 jupyterhub==0.9.4
 jupyterlab==0.35.4
 jupyterlab-server==0.2.0
+Keras==2.2.5
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
 kiwisolver==1.0.1
@@ -66,6 +67,7 @@ numba==0.38.1
 numexpr==2.6.9
 numpy==1.17.0
 olefile==0.46
+opt-einsum==3.0.1
 packaging==19.0
 pamela==1.0.0
 pandas==0.23.4
@@ -109,13 +111,14 @@ SQLAlchemy==1.2.18
 statsmodels==0.9.0
 sympy==1.1.1
 tabulate==0.8.3
-tb-nightly==1.14.0a20190603
+tb-nightly==1.15.0a20190806
 tblib==1.3.2
-tensorflow==2.0.0b1
+tensorflow==2.0.0rc0
+tensorflow-estimator-2.0-preview==1.14.0.dev2019083101
 termcolor==1.1.0
 terminado==0.8.1
 testpath==0.4.2
-tf-estimator-nightly==1.14.0.dev2019060501
+tf-estimator-nightly==1.14.0.dev2019080601
 toolz==0.9.0
 tornado==5.1.1
 traitlets==4.3.2
